# nipsu

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: test.yaml
src/nipsu/: __init__.py  cli.py  exceptions.py  packet.py  sniffer.py
src/nipsu/output/: __init__.py  base.py  json.py  rich.py  yaml.py
src/nipsu/protocols/: __init__.py  base.py
src/nipsu/protocols/layer2/: __init__.py  arp.py  ethernet.py
src/nipsu/protocols/layer3/: __init__.py  icmp.py  ip.py
src/nipsu/protocols/layer4/: __init__.py  tcp.py  udp.py
tests/: test_cli.py  test_packet.py  test_sniffer.py
tests/test_layer2/: test_ethernet.py
tests/test_layer3/: ip.py  test_ip.py
tests/test_layer4/: test_tcp.py
tests/test_protocols/test_layer2/: test_ethernet.py
tests/test_protocols/test_layer3/: test_ip.py
tests/test_protocols/test_layer4/: test_tcp.py  test_udp.py
